kafka config docker cluster

--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>core.Starter</mainClass>
+                            <mainClass>core.Generator</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
