--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>core.Generator</mainClass>
+                            <mainClass>core.Starter</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -67,7 +67,7 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-streaming-java_2.12</artifactId>
             <version>1.8.0</version>
-            <!--<scope>provided</scope>-->
+           <!-- <scope>provided</scope>-->
         </dependency>
 
         <dependency>
